--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>El titulo del post</title>
+        <title>Bienbenido a hyperblog</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
